# landscape2

./: .gitattributes  .gitignore  .rustfmt.toml  ADOPTERS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  OWNERS  README.md  SECURITY.md  askama.toml  build.rs  dist-workspace.toml  package-lock.json
.github/: dependabot.yml
.github/workflows/: build-ai-memory.yml  build-images.yml  ci.yml  release.yml  test.yml
ai-memory-landscape/: README.md  data.yml  guide.yml  settings.yml
crates/cli/: Cargo.toml  Dockerfile  askama.toml  build.rs
crates/cli/src/: lib.rs  main.rs
crates/cli/src/deploy/: mod.rs  s3.rs
crates/cli/src/new/: mod.rs
crates/cli/src/new/template/: data.yml  games.yml  guide.yml  settings.yml
crates/cli/src/serve/: mod.rs
crates/cli/src/validate/: mod.rs
crates/cli/templates/: projects.md
crates/core/: Cargo.toml
crates/core/src/: data.rs  datasets.rs  games.rs  guide.rs  lib.rs  settings.rs  stats.rs  util.rs
crates/core/src/data/: legacy.rs
crates/core/src/testdata/: data.yml  games.yml  guide.yml  settings.yml
crates/wasm/overlay/: Cargo.toml  overlay-test.html
crates/wasm/overlay/src/: lib.rs
crates/wasm/quiz/: Cargo.toml  quiz-test.html
crates/wasm/quiz/src/: lib.rs
crates/wasm/quiz/src/testdata/: quiz1.json  quiz2.json
docs/config/: data.yml  games.yml  guide.yml  settings.yml
docs/config/schema/: data.schema.json  games.schema.json  guide.schema.json  settings.schema.json
embed/: embed.html  package.json  vite.config.ts
embed/src/: App.tsx  types.ts
embed/src/common/: ExternalLink.tsx  GridItem.tsx  Image.tsx  StyleView.tsx
embed/src/utils/: getUrl.tsx
scripts/: landscape2-validate.sh
src/: build.rs  cache.rs  crunchbase.rs  data.rs  datasets.rs  github.rs  landscape.rs  logos.rs  main.rs  projects.rs  s3.rs  settings.rs  tmpl.rs  validate.rs
src/deploy/: mod.rs  s3.rs
src/new/: mod.rs
src/new/template/: guide.yml  settings.yml
src/serve/: mod.rs
src/validate/: mod.rs
templates/: index.html
ui/common/: package.json  tsconfig.json  tsup.config.ts  vite.config.ts
ui/common/src/: index.tsx
ui/common/src/components/: AcquisitionsTable.tsx  Badge.tsx  BadgeModal.tsx  Box.tsx  ButtonCopyToClipboard.tsx  CodeBlock.tsx  CollapsableText.tsx  ExternalLink.tsx  FoundationBadge.tsx  FundingRoundsTable.tsx  Image.tsx  ItemDropdown.tsx  ItemModalContent.tsx  ItemModalMobileContent.tsx  LanguagesStats.tsx  Loading.tsx  MaturityBadge.tsx  MaturitySection.tsx  MobileMaturitySection.tsx  Modal.tsx  NoData.tsx  ParentProject.tsx  ParticipationStats.tsx  RepositoriesSection.tsx  SVGIcon.tsx  Tabs.tsx
ui/common/src/data/: data.ts
ui/common/src/hooks/: index.ts  useBodyScroll.ts  useBreakpointDetect.tsx  useModalFocus.ts
ui/common/src/types/: types.ts
ui/common/src/utils/: calculateAxisValues.ts  cleanEmojis.ts  cutString.ts  formatPercentage.ts  formatProfitLabel.ts  formatShieldsBadgeContent.ts  formatSummaryField.ts  formatTAGName.ts  getDeviceConfig.ts  getItemDescription.ts  getMainTag.ts  index.tsx  linkify.ts  prettifyNumber.ts  replaceLineBreaks.ts  sortObjectByValue.ts
ui/embed/: .eslintrc  .prettierignore  eslint.config.js  package.json  vite.config.ts  vite.config.ts.timestamp-1716895318961-53c6d3c6134f6.mjs
ui/embed-item/: .env  embed-item.html  package.json  tsconfig.json  vite.config.ts
ui/embed-item/public/: embed-item.js
ui/embed-item/src/: App.tsx  index.tsx  types.ts  window.d.ts
ui/embed-item/src/__tests__/: App.test.tsx
ui/embed-item/src/common/: ItemModal.tsx
ui/embed-item/src/styles/: App.css
ui/embed-item/src/utils/: itemsDataGetter.ts
ui/embed/src/: App.tsx  index.tsx  types.ts  window.d.ts
ui/embed/src/common/: CardItem.tsx  ExternalLink.tsx  GridItem.tsx  Image.tsx  ItemModal.tsx  Loading.tsx  NoData.tsx  SVGIcon.tsx  StyleView.tsx
ui/embed/src/styles/: App.css  GlobalStyles.ts  default.scss
ui/embed/src/utils/: getUrl.tsx  itemsDataGetter.ts
ui/kiosk/: kiosk.html
ui/webapp/: .env.local.example  eslint.config.js  index.html  jest.babel-preset.cjs  jest.config.js  jest.import-meta.cjs  jest.setup.js  package.json  playwright.config.ts  tsconfig.jest.json  tsconfig.json  vite.config.ts
ui/webapp/src/: App.css  App.module.css  App.tsx  data.ts  index.tsx  types.ts  window.d.ts
ui/webapp/src/hooks/: useOutsideClick.ts
ui/webapp/src/layout/: Layout.module.css  index.tsx
ui/webapp/src/styles/: bootstrap.scss  cookies.css  light.scss  mixins.scss
ui/webapp/src/test-utils/: commonMock.tsx
ui/webapp/src/utils/: buildNormalizedId.test.ts  buildNormalizedId.ts  calculateGridWidthInPx.ts  checkIfCategoryInGroup.ts  checkQueryStringValue.ts  cleanEmojis.ts  createIncrementalLimit.ts  cutString.tsx  detectIfSafari.ts  downloadDocument.ts  filterData.ts  formatLabelProfit.ts  getName.ts  (+37 more)
web/: .eslintrc  .eslintrc.cjs  .gitignore  index.html  package.json  vite.config.ts
web/assets/js/: gtm.js
web/public/assets/: gtm.js
web/src/: App.css  App.tsx  data.ts  index.tsx  main.tsx  types.ts  window.d.ts
web/src/hooks/: useBodyScroll.ts  useBreakpointDetect.ts  useBreakpointDetect.tsx  useOutsideClick.ts
web/src/layout/: index.tsx
web/src/styles/: cookies.css  default.scss  light.scss
web/src/utils/: areEqualProps.ts  calculateAxisValues.ts  calculateGridItemsPerRow.ts  capitalizeFirstLetter.ts  cleanEmojis.ts  convertStringSpaces.ts  countVisibleItems.tsx  filterData.ts  formatLabelProfit.ts  generateColorsArray.ts  getBasePath.ts  getCategoriesWithItems.ts  getClassifyAndSortOptions.ts  getFoundationNameLabel.ts  getNormalizedName.ts  goToElement.ts  gridCategoryLayout.ts  gridLayout.ts  isAllChinese.ts  isElementInView.ts  isExploreSection.ts  isSectionInGuide.ts  itemsDataGetter.ts  itemsIterator.tsx  nestArray.ts  prepareBaseData.ts  prepareData.ts  prepareFilters.ts  prepareFinances.tsx  prepareMenu.ts  prettifyBytes.ts  prettifyNumber.ts  rgba2hex.ts  scrollToTop.ts  slugify.ts  sortItems.ts  sortItemsByOrderValue.ts  sortMaturityStatusTitles.ts  sortMenuOptions.ts  sortObjectByValue.ts  (+1 more)
web/templates/: index.html
wix/: main.wxs
(+365 files in other folders)
