[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/core",
    "crates/wasm/overlay",
    "crates/wasm/quiz"
]

[workspace.package]
version = "1.0.0"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.90.0"
authors = ["Sergio Castaño Arteaga", "Cintia Sanchez Garcia"]
homepage = "https://github.com/cncf/landscape2"

[workspace.dependencies]
anyhow = "1.0.100"
askama = { version = "0.14.0", features = ["serde_json"] }
async-trait = "0.1.89"
aws-config = "1.8.8"
aws-sdk-s3 = "1.108.0"
axum = "0.8.6"
base64 = "0.22.1"
cached = { version = "0.56.0", default-features = false, features = ["async", "proc_macro"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.49", features = ["derive"] }
csv = "1.3.1"
deadpool = "0.12.3"
dirs = "6.0.0"
futures = "0.3.31"
gloo-console = "0.3.0"
gloo-net = { version = "0.6.0", default-features = false, features = ["http", "json"] }
headless_chrome = "1.0.18"
hex = "0.4.3"
imagesize = "0.14.0"
itertools = "0.14.0"
leaky-bucket = "1.1.2"
markdown = "1.0.0"
md-5 = "0.10.6"
mime_guess = "2.0.5"
mockall = "0.13.1"
mockito = "1.7.0"
num_cpus = "1.17.0"
octorust = "0.10.0"
parse_link_header = "0.4.0"
pretty_assertions = "1.4.1"
qrcode = "0.14.1"
rand = "0.9.1" # do-not-upgrade
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json",  "multipart", "native-tls-vendored"] }
reqwest-middleware = "0.4.2"
rust-embed = "8.7.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde-wasm-bindgen = "0.6.5"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = [
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "time",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tower = "0.5.1"
tower-http = { version = "0.6.6", features = ["fs", "set-header"] }
url = "2.5.7"
usvg = "0.37.0" # do-not-upgrade
walkdir = "2.5.0"
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3.76", features = ["console"] }
which = "8.0.0"

[profile.release]
lto = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
