[package]
name = "landscape2-core"
description = "Landscape2 core functionality"
repository = "https://github.com/cncf/landscape2"
readme = "../../README.md"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
itertools = { workspace = true }
markdown = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
unicode-segmentation = "1.12.0"
url = { workspace = true }
wasm-bindgen = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
pretty_assertions = { workspace = true }
tokio = { workspace = true }
