[package]
name = "landscape2-overlay-academic"
description = "Landscape2 Academic overlay data provider"
repository = "https://github.com/open-neuroscience-foundation/landscape2-academic"
readme = "../../../README.md"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
landscape2-core-academic = { path = "../../core" }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
