[package]
name = "landscape2-quiz"
description = "Landscape2 quiz"
repository = "https://github.com/cncf/landscape2"
readme = "../../../README.md"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
cached = { workspace = true }
gloo-console = { workspace = true }
gloo-net = { workspace = true }
landscape2-core = { path = "../../core" }
rand = { workspace = true }
serde = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[dependencies.getrandom]
version = "0.2.16" # do-not-upgrade
features = ["js"]

[dev-dependencies]
mockito = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
